--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             id="content"
           />
 
-          <input type="submit" value="Add to do" />
+          <input type="submit" value="Add to do" id="addtask" />
         </form>
       </section>
       <!-- End of New Todo -->
